--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-user/repo-url.git"
+    "url": "https://github.com/NicoLudo/P14-nl-dropdown-component.git"
   }
 }
