--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nicoludo/nl-dropdown-component",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "A simple React dropdown.",
   "type": "module",
   "main": "dist/index.js",
@@ -13,7 +13,7 @@
   "author": "Nicolas Ludosan",
   "license": "MIT",
   "keywords": ["dropdown", "component", "react"],
-  "repository": "https://github.com/NicoLudo/P14-nl-dropdown-component.git",
+  "repository": "git+https://github.com/NicoLudo/P14-nl-dropdown-component.git",
   "peerDependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
